src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Clicks__c</fullName>
        <label># of Clicks</label>
        <summarizedField>CampaignMember.cirrusadv__Num_of_Clicks__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Emails_Clicked__c</fullName>
        <label># of Emails Clicked</label>
        <summaryFilterItems>
            <field>CampaignMember.cirrusadv__Num_of_Clicks__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Emails_Opened__c</fullName>
        <label># of Emails Opened</label>
        <summaryFilterItems>
            <field>CampaignMember.cirrusadv__Num_of_Opens__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <label># of Opens</label>
        <summarizedField>CampaignMember.cirrusadv__Num_of_Opens__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Replies__c</fullName>
        <label># of Replies</label>
        <summarizedField>CampaignMember.cirrusadv__Num_of_Replies__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__mass_email_id__c</fullName>
        <label>Mass Email Id</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Monitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor__c</fullName>
        <formula>IF( wbsendit__Campaign_Monitor_Id__c == null,
    
    HYPERLINK(&quot;/apex/wbsendit__LinkCampaign?Id=&quot; + Id , &quot;Link to Campaign Monitor&quot;, &quot;_self&quot;),

    /** Else  */
    HYPERLINK(IF($User.UIThemeDisplayed=&quot;Theme4d&quot;, &quot;/lightning/cmp/wbsendit__CampaignMonitor&quot; ,&quot;/apex/wbsendit__SendItReports&quot;) + &quot;?wbsendit__campaignId=&quot; + wbsendit__Campaign_Monitor_Id__c + &quot;&amp;wbsendit__reportId=1&quot;, &quot;View Report&quot;, &quot;_self&quot;) + &quot; &quot; 
    + HYPERLINK(&quot;/apex/wbsendit__Disconnect?Id=&quot; + Id, &quot;[Disconnect]&quot;, &quot;_self&quot;)
)</formula>
        <inlineHelpText>Connect this Salesforce Campaign to sent campaigns in Campaign Monitor. Use this to manage campaign reports from within Salesforce. Send It will add any members it finds in Campaign Monitor to this campaign.</inlineHelpText>
        <label>Campaign Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Text_Version__c</fullName>
        <description>Text version of the email sent.</description>
        <inlineHelpText>Text version of the email sent.</inlineHelpText>
        <label>Email Text Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Web_Version__c</fullName>
        <description>Web version of the email campaign.</description>
        <inlineHelpText>Web version of the email campaign.</inlineHelpText>
        <label>Email Web Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Bounced__c</fullName>
        <description>Number of bounced emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Clicks__c</fullName>
        <description>Number of clicks for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of clicks for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Forwards__c</fullName>
        <description>Number of forwarded emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of forwarded emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Likes__c</fullName>
        <description>Number of likes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of likes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Mentions__c</fullName>
        <description>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Mentions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Opens__c</fullName>
        <description>Number of open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Recipients__c</fullName>
        <description>Number of recipients for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of recipients for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Spam_Complaints__c</fullName>
        <description>Number of Spam Complaints for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of Spam Complaints for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Spam Complaints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unique_Opens__c</fullName>
        <description>Number of unique open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unique open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unsubscribed__c</fullName>
        <description>Number of unsubscribes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unsubscribes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__World_View_Email_Tracking__c</fullName>
        <description>World view of the email campaign tracking.</description>
        <inlineHelpText>World view of the email campaign tracking.</inlineHelpText>
        <label>World View Email Tracking</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>wbsendit__Campaign_Monitor_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Management</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <label>Campaign Management</label>
    </listViews>
    <listViews>
        <fullName>HLTH19</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Mine</filterScope>
        <label>HLTH19</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>